--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.7",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.75.1",
     "@types/mdx": "^2.0.13",
     "next": "15.1.7",
     "next-sanity": "^9.8.57",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sanity": "^3.75.1",
-    "@sanity/vision": "^3.75.1"
+    "sanity": "^3.75.1"
   },
   "devDependencies": {
-    "@sanity/eslint-config-studio": "^5.0.1",
     "@eslint/eslintrc": "^3",
+    "@sanity/eslint-config-studio": "^5.0.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
